unpackaged/main/default/objects/Product2/fields/Add_Implementation_Service__c.field-meta.xml
<CustomField>
    <fullName>Add_Implementation_Service__c</fullName>
    <defaultValue>&quot;Add&quot;</defaultValue>
    <label>Add Implementation Service</label>
    <length>80</length>
    <type>Text</type>
</CustomField>