unpackaged/main/default/objects/Product2/fields/ccpe_ocp__Project__c.field-meta.xml
<CustomField>
    <fullName>ccpe_ocp__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Project is not a Project Template.</errorMessage>
        <filterItems>
            <field>project_cloud__Project__c.project_cloud__IsTemplate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>