unpackaged/main/default/objects/Product2/fields/Implementation_Services_SKU__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Services_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Services SKU</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Implementation Services SKU)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>