unpackaged/main/default/objects/Product2/fields/Legacy_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product_Id__c</fullName>
    <label>Legacy Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>