unpackaged/main/default/objects/Product2/fields/Line_Classification__c.field-meta.xml
<CustomField>
    <fullName>Line_Classification__c</fullName>
    <formula>TEXT( Family ) + &quot; &quot; +  TEXT( Product_Line__c ) + &quot; &quot; + TEXT( Product_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Classification</label>
    <type>Text</type>
</CustomField>