unpackaged/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>&quot;Software</fullName>
                <isActive>false</isActive>
                <label>&quot;Software</label>
            </value>
            <value>
                <fullName>Professional Services&quot;</fullName>
                <isActive>false</isActive>
                <label>Professional Services&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>