unpackaged/main/default/objects/Product2/fields/Product_Services__c.field-meta.xml
<CustomField>
    <fullName>Product_Services__c</fullName>
    <label>Product Services</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Consulting/Other</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Edge Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>