unpackaged/main/default/objects/Product2/fields/Requires_Implementation_SKU__c.field-meta.xml
<CustomField>
    <fullName>Requires_Implementation_SKU__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Implementation SKU</label>
    <type>Checkbox</type>
</CustomField>