unpackaged/main/default/objects/Product2/fields/Services_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Services_Short_Name__c</fullName>
    <label>Services Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>