unpackaged/main/default/objects/Product2/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <formula>TEXT(QuantityUnitOfMeasure)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UoM</label>
    <type>Text</type>
</CustomField>